Add preview API
